[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.15"
]
build-backend = "setuptools.build_meta"

[project]
name = "bgp_simulator"
version = "0.1.0"
description = "High-performance BGP routing simulator with C++ core"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bgp", "routing", "simulation", "networking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: System :: Networking",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
bgp-simulate = "bgp_simulator.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/bgp_simulator"
Repository = "https://github.com/yourusername/bgp_simulator"
Issues = "https://github.com/yourusername/bgp_simulator/issues"

[tool.setuptools]
packages = ["bgp_simulator"]

[tool.setuptools.package-data]
bgp_simulator = ["py.typed", "*.so", "*.pyd"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "ANN", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["D100", "D104", "D203", "D213", "ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["bgp_simulator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]